--- a/lesson_22/lessonTasks/index.html
+++ b/lesson_22/lessonTasks/index.html
@@ -16,7 +16,7 @@
             </span>
         </p>
     </div>
-    <div class="event-list">
+    <div class="events-list">
     </div>
     <button class="btn btn_clear">Clear</button>
     <button class="btn btn_attach">Attach handlers</button>
