--- a/test/index.html
+++ b/test/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+     input {
+        position: relative;
+        width: 150px; height: 20px;
+        color: white;
+    }
+
+    input:before {
+        position: absolute;
+        top: 3px; left: 3px;
+        content: attr(data-date);
+        /* display: inline-block; */
+        color: black;
+    }
+
+    input::-webkit-datetime-edit,
+    input::-webkit-inner-spin-button,
+    input::-webkit-clear-button {
+        display: none;
+    }
+
+    input::-webkit-calendar-picker-indicator {
+        position: absolute;
+        top: 3px;
+        right: 0;
+        color: black;
+        opacity: 1;
+    }
+    </style>
 </head>
 <body>
+    <input type="date" data-date="20 feb 2015" value="2015-08-09">
     <script src="test.js"></script>
 </body>
 </html>
